--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,36 @@
-users
+= cegeka-users module
 
-This is the users module.
+This is the users module. Use this module to create users and/or groups and
+to distribute the public key you normally use to authenticate to a remote machine. 
+
+== Recommended use
+
+The definitions in this module are most efficiently used when combined with virtual resources, that can be realized when needed:
+
+  class mysite::users {
+    @users::localgroup { 'admins':
+      gid => '5000'
+    }
+
+    @users::localuser { 'foo':
+      uid        => '5000',
+      logingroup => 'admins'
+    }
+
+    @users::localuser { 'bar':
+      uid        => '5001',
+      logingroup => 'admins',
+      shell      => '/bin/ksh'
+    }
+  }
+
+You can now easily realize the virtual users as you see fit.
+
+  class mysite::myserver {
+    include mysite::users
+
+    realize Users::Localgroup['admins']
+    realize Users::Localuser['foo']
+  }
+
+This enables you to consolidate your users and still be flexible.
