--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-= cegeka-users module
+= puppet-users module
+
+{<img src='https://codex.cegeka.be/jenkins/job/puppet-users/badge/icon' />}[https://codex.cegeka.be/jenkins/job/puppet-users/]
 
 This is the users module. Use this module to create users and/or groups and
 to distribute the public key you normally use to authenticate to a remote machine. 
